--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,22 @@
         "src": "automate_news_poster/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
+        }
     }],
     "routes": [
         {
             "src": "/(.*)",
             "dest": "automate_news_poster/wsgi.py"
+        },
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
         }
     ]
 }
